# LiteClaw

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRD.md  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
apps/backend/: README.md  main.py  pytest.ini  requirements.txt
apps/backend/.liteclaw-data/sessions/tasks/: 0384a045-4cda-4737-b9c0-a4785ecbdc5a.json  05f075cd-6f84-45c8-a486-e1d90882f5b6.json  075d3141-6e39-414a-85f0-bcbac981e9c0.json  158c4cec-6b7b-4b18-be12-c538c106f45e.json  181ee8ee-6565-4962-867f-66fd400bd773.json  1cb645a5-0d19-479f-a314-09d82a1f16b8.json  22d01fa7-06a8-46e9-b239-a178102368b1.json  242c5741-77e6-4270-9060-3a5d3bfb98ea.json  24ce3e41-48ae-4aa7-8e21-181ac68e5f9b.json  25cf5c0a-8799-49c7-98b7-943ac4313a2c.json  2a5deff6-6183-4545-aefa-6a23c91efd2d.json  2ac4b784-b7f9-4476-9a12-ed23204c328a.json  2d567ef0-28ec-423d-89c8-df8b55a5398b.json  (+90 more)
apps/backend/tests/: test_approvals_and_execute.py  test_auth.py  test_config_reload.py  test_file_agent.py  test_m6_doctor_tasks_logs.py  test_models.py  test_router_confidence.py  test_shell_agent.py
apps/desktop/: README.md  index.html  package.json
apps/desktop/scripts/: prepare-web.mjs
apps/desktop/src/: main.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
docs/: alpha-issues.md  issues-backlog.md
schemas/: action-card.schema.json  approval-token.schema.json  doctor-report.schema.json  permission-scope.schema.json  plan.schema.json  task-trace.schema.json
