[package]
name = "liteclaw-desktop"
version = "0.1.0"
description = "LiteClaw desktop shell"
authors = ["LiteClaw Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-dialog = "2.6.0"
ureq = { version = "2.10.1", default-features = true }
uuid = { version = "1.11.1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
